--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.books.shelf">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,9 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".BookListActivity"></activity>
-        <activity android:name=".MainActivity" />
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name">
@@ -23,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".BookListActivity"/>
+        <activity android:name=".BookDetailsActivity"/>
     </application>
 
 </manifest>
